--- a/res/less/components/content.less
+++ b/res/less/components/content.less
@@ -52,7 +52,7 @@
     &:extend(.decoration-striped);
     &:extend(.content-striped all);
     justify-content: space-between;
-    padding: 0.2rem 0.4rem;
+    padding: .25rem .5rem;
     position: relative;
 
     &:not(:first-child) {
